# pelican

./: .env.example  .gitignore  README.md  known_issues.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AgentLog.tsx  BacktestChart.tsx  SignalBrowser.tsx
frontend/src/pages/: Dashboard.tsx  FactorTearsheet.tsx  Portfolio.tsx  Research.tsx  Signals.tsx
pelican/: __init__.py  cli.py
pelican/agents/: __init__.py  coder.py  critic.py  graph.py  reporter.py  researcher.py  state.py
pelican/agents/prompts/: coder.md  critic.md  reporter.md  researcher.md
pelican/agents/tools/: __init__.py  (+5 more)
pelican/api/: deps.py  main.py  models.py  services.py
pelican/backtest/: __init__.py  engine.py  metrics.py  signals.py  universe.py
pelican/data/: __init__.py  edgar.py  fundamentals.py  news.py  prices.py  store.py  universe.py
pelican/factors/: __init__.py  correlation.py  edgar_sentiment.py  low_vol.py  momentum.py  news_sentiment.py  quality.py  size.py  value.py
pelican/portfolio/: __init__.py  combiner.py  optimizer.py  risk.py
pelican/utils/: __init__.py  config.py  logging.py
scripts/: run_agent.py  run_factor_library.py  run_momentum_backtest.py  run_portfolio.py  seed_data.py  seed_edgar.py  seed_fundamentals.py  seed_news.py
tests/: test_api.py  test_backtest.py  test_config_logging.py  test_data.py  test_edgar.py  test_factors.py  test_integrity.py  test_portfolio.py  test_reporter.py  test_researcher.py  test_seed_data.py  test_signals.py
(+6 files in other folders)
