[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pelican"
version = "0.1.0"
description = "Agentic factor research platform: autonomous signal discovery, backtesting, and portfolio construction"
requires-python = ">=3.11"
dependencies = [
    # Data
    "polars>=0.20",
    "pyarrow>=16.0",
    "duckdb>=0.10",
    "yfinance>=0.2",
    "sec-edgar-downloader>=5.0",
    "httpx>=0.27",
    # Agents / LLM
    "langgraph>=0.1",
    "langchain>=0.2",
    "langchain-openai>=0.1",   # used with OpenRouter base_url override
    "langchain-community>=0.2",
    "openai>=1.0",             # OpenRouter is OpenAI-compatible
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    # Portfolio / quant
    "cvxpy>=1.4",
    "scipy>=1.13",
    "numpy>=1.26",
    "optuna>=3.6",
    # Utilities
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx",           # async test client for FastAPI
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
pelican = "pelican.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
